--- a/Biblio/biblio.bib
+++ b/Biblio/biblio.bib
@@ -1695,3 +1695,12 @@
   year={2014},
   volume={7}
 }
+
+@article{Fix2011ADN,
+  title={A Dynamic Neural Field Approach to the Covert and Overt Deployment of Spatial Attention},
+  author={Jeremy David Fix and Nicolas P. Rougier and Fr{\'e}d{\'e}ric Alexandre},
+  journal={Cognitive Computation},
+  year={2011},
+  volume={3},
+  pages={279-293}
+}
