--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -1,11 +1,9 @@
-\section*{Conclusion}
-
-
+\chapter*{Conclusion}
 
 Perspectives : 
 
 Mémoire associative pas forcément le cas d'étude le plus adapté à un contexte de modularité.
-Mémoires temporelles (référence to Fred), interactions avec environnement vs modules d'apprentissage, \cite{Ellefsen2015NeuralMH}
+Mémoires temporelles, interactions avec environnement vs modules d'apprentissage, \cite{Ellefsen2015NeuralMH}
 Apprentissage sur le long terme.
 
 Proximité avec modules récurrents pour une généralisation du modèle.
