--- a/main.tex
+++ b/main.tex
@@ -51,7 +51,7 @@
   backrefpages={}
 }
 %\addbibresource{\subfix{./Biblio/biblio.bib}}
-%\addbibresource{./Biblio/biblio.bib}
+\addbibresource{./Biblio/biblio.bib}
 \input{Notations.tex}
 %compile only a chapter
 \SetAlCapSkip{1em}
@@ -66,6 +66,7 @@
 \begin{document}
 \dominitoc
 \include{titlepage}
+\setcounter{tocdepth}{1}
 \tableofcontents
 \subfile{00-Introduction/source}
 %\subfile{01-Modularite/source}
@@ -74,8 +75,8 @@
 %Chapitre en plus : multimodalité ?
 \subfile{02-Architectures/source}
 \subfile{03-SOM/source}
-\subfile{04-Representation/source}
 \subfile{07-Relaxation/source}
+\subfile{04-Representation/source}
 \subfile{06-Analyse/source}
 \subfile{05-Indicateur/source}
 \subfile{06b-Analyse-2D/source}
