--- a/titlepage.tex
+++ b/titlepage.tex
@@ -1,12 +1,13 @@
 \ThesisTitle{Auto-organisation Décentralisée Multi-Cartes}
-\ThesisDate{ ? décembre 2022}
+\ThesisDate{ ? juin 2023}
 \ThesisAuthor{Noémie Gonnier}
 \ThesisUL
 % Jury:
-\President = {Le président &du jury}
-\Rapporteurs = {Le rapporteur 1 &du laboratoire\\
-Le rapporteur 2\\
-Le rapporteur 3}
-\Examinateurs = {L’examinateur 1\\
-L’examinateur 2}
+% \President = {Le président &du jury}
+\Rapporteurs = {Madalina Olteanu & Université Paris Dauphine, CEREMADE\\
+Frédéric Alexandre & INRIA Bordeaux Sud-Ouest, Labri\\}
+\Examinateurs = {Mathias Quoy & CY-Univsersité Cergy\\
+Baya Lydia Boudjeloud-Assala & Université de Lorraine, LORIA}
+\Encadrants = {Hervé Frezza-Buet & CentraleSupelec, LORIA\\
+Yann Boniface & Université de Lorraine, LORIA}
 \MakeThesisTitlePage
